--- a/pages/layout.html
+++ b/pages/layout.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SSA</title>
+
+    <style>
+      html {
+        color-scheme: light dark;
+      }
+    </style>
   </head>
   <body>
     {{page .Name .Payload}}
