--- a/pages/signup.html
+++ b/pages/signup.html
@@ -1,5 +1,5 @@
 {{define "signup"}}
-<h1 class="mt-8 mb-16 font-extrabold text-5xl">Sign Up</h1>
+<h1 class="mt-8 mb-16 text-center font-extrabold text-5xl">Sign Up</h1>
 
 <form hx-post="/users/signup" hx-ext="json-enc" class="flex flex-col gap-4">
   <input
