--- a/pages/home.html
+++ b/pages/home.html
@@ -1,5 +1,5 @@
 {{define "home"}}
-<h1 class="mt-8 mb-16 font-extrabold text-5xl">
+<h1 class="mt-8 mb-16 text-center font-extrabold text-5xl">
   Hello <em class="font-semibold italic underline">{{.Email}}</em>
 </h1>
 {{end}}
