--- a/pages/login.html
+++ b/pages/login.html
@@ -1,5 +1,5 @@
 {{define "login"}}
-<h1 class="mt-8 mb-16 font-extrabold text-5xl">Login</h1>
+<h1 class="mt-8 mb-16 text-center font-extrabold text-5xl">Login</h1>
 
 <form hx-post="/users/login" hx-ext="json-enc" class="flex flex-col gap-4">
   <input
